--- a/_posts/2014-12-09-jan-event.md
+++ b/_posts/2014-12-09-jan-event.md
@@ -1,7 +1,7 @@
 ---
 layout: event
 category: event
-title: Maptime Roma December Meetup
+title: Maptime Roma December Meeting
 rsvp: https://www.eventbrite.it/e/maptime-rome-chapter-primo-incontro-tickets-14709256783
 ---
 
@@ -20,4 +20,3 @@ Organizers:
 
 - Luca Moiana [@lucamoiana](http://twitter.com/lucamoiana)
 - Paolo Corti [@capooti](http://twitter.com/capooti)
-
