--- a/_posts/2015-01-28-jan-event.md
+++ b/_posts/2015-01-28-jan-event.md
@@ -5,6 +5,8 @@ title: OSM dalla A alla Z!
 published: false
 ---
 
+Tuesday, Jan 27 2015, 6PM
+
 Grande entusiasmo per OSM nel secondo meeting del gruppo
 
 ![Maptime Roma Dic 2014](https://raw.githubusercontent.com/maptime/roma/gh-pages/img/dec_2014.JPG)
