updated blog post meeting

--- a/_posts/2015-01-28-jan-event.md
+++ b/_posts/2015-01-28-jan-event.md
@@ -9,18 +9,20 @@ Tuesday, Jan 27 2015, 6PM
 
 Grande entusiasmo per OSM nel secondo meeting del gruppo
 
-![Maptime Roma Dic 2014](https://raw.githubusercontent.com/maptime/roma/gh-pages/img/dec_2014.JPG)
+![Maptime Roma Dic 2014](https://www.flickr.com/x/t/0095009/photos/moianaluca/16385120542/)
+
 
 <br/>
-L'introduzione è stata fatta da [Martin Koppenhöfer](http://https://twitter.com/dieterdreist)
+ [Martin](http://https://twitter.com/dieterdreist) e [Fabrizione](https://www.openstreetmap.org/user/Giardia) ci hanno introdotto OSM.
+ Ecco loro [presentazione](https://www.dropbox.com/s/y1u69fxa90ppp5t/20150127_CaE_OpenStreetMap.pdf?dl=0)
 <br/>
 
-Il focus della discussione è stata sull'[uso dei dati](http://wiki.openstreetmap.org/wiki/IT:Legal_FAQ) e sul funzionamento di [JOSM](https://josm.openstreetmap.de)<br/>
+Si è molto discusso di [uso dei dati](http://wiki.openstreetmap.org/wiki/IT:Legal_FAQ) e del funzionamento di [JOSM](https://josm.openstreetmap.de)<br/>
 
 
 __Prossimo appuntamento a Febbraio__ <br/>
-
 __PROPONI UN ARGOMENTO__ <br/>
+
 
 Iscrivetevi alla nostra [mailing list](https://groups.google.com/forum/#!forum/maptimeroma)
 
