--- a/_posts/2015-01-28-jan-event.md
+++ b/_posts/2015-01-28-jan-event.md
@@ -13,7 +13,7 @@ Grande entusiasmo per OSM nel secondo meeting del gruppo
 
 
 <br/>
- [Martin](http://https://twitter.com/dieterdreist) e [Fabrizione](https://www.openstreetmap.org/user/Giardia) ci hanno introdotto OSM.
+ [Martin](http://https://twitter.com/dieterdreist) e [Fabrizio](https://www.openstreetmap.org/user/Giardia) ci hanno introdotto OSM.
  Ecco loro [presentazione](https://www.dropbox.com/s/y1u69fxa90ppp5t/20150127_CaE_OpenStreetMap.pdf?dl=0)
 <br/>
 
