--- a/_posts/2015-01-28-jan-event.md
+++ b/_posts/2015-01-28-jan-event.md
@@ -26,4 +26,4 @@ __PROPONI UN ARGOMENTO__ <br/>
 
 Iscrivetevi alla nostra [mailing list](https://groups.google.com/forum/#!forum/maptimeroma)
 
-Se ci sono problemi [mailto:maptime.roma@gmail.com scrivici]
+Se ci sono problemi [scrivici](mailto:maptime.roma@gmail.com)
