--- a/_posts/2015-01-28-jan-event.md
+++ b/_posts/2015-01-28-jan-event.md
@@ -9,7 +9,7 @@ Tuesday, Jan 27 2015, 6PM
 
 Grande entusiasmo per OSM nel secondo meeting del gruppo
 
-![Maptime Roma Dic 2014](https://www.dropbox.com/s/b1la656l1ffdokp/16385120542_4faf87eae5_m.jpg?dl=0)
+![Maptime Roma Dic 2014](https://www.dropbox.com/s/b1la656l1ffdokp/16385120542_4faf87eae5_m.jpg?raw=1)
 
 
 <br/>
