--- a/_posts/2015-01-28-jan-event.md
+++ b/_posts/2015-01-28-jan-event.md
@@ -21,7 +21,10 @@ Si è molto discusso di [uso dei dati](http://wiki.openstreetmap.org/wiki/IT:Leg
 
 
 __Prossimo appuntamento a Febbraio__ <br/>
-__PROPONI UN ARGOMENTO__ <br/>
+
+Clicca [QUI](http://doodle.com/udahtkz9ihmq9vsm) per proporre la data e
+
+__SCRIVICI PER PROPORRE UN ARGOMENTO__ <br/>
 
 
 Iscrivetevi alla nostra [mailing list](https://groups.google.com/forum/#!forum/maptimeroma)
