--- a/_posts/2015-02-24-feb-event.md
+++ b/_posts/2015-02-24-feb-event.md
@@ -13,7 +13,7 @@ Where we meet:
 - <a href="http://www.cittadellaltraeconomia.org/index.php?option=com_content&view=article&id=24&Itemid=176">Rione Testaccio, all'interno del Campo Boario dell'ex-Mattatoio</a>
 - ROMA
 
-_GET YOUR DATA OUT OF SHAPE_
+__GET YOUR DATA OUT OF SHAPE__
 
 Tutorial PostGIS per PRINCIPIANTI, con una ricetta AVANZATA.
 
