--- a/_posts/2015-02-24-feb-event.md
+++ b/_posts/2015-02-24-feb-event.md
@@ -17,7 +17,7 @@ __GET YOUR DATA OUT OF SHAPE__
 
 Tutorial PostGIS per PRINCIPIANTI, con una ricetta AVANZATA.
 
-A beginner tutorial with some advanced recipes.
+A beginners tutorial with some advanced recipes.
 
 __Beginners are encouraged, and be sure bring your laptop.__
 
